--- a/emacs.org
+++ b/emacs.org
@@ -1089,7 +1089,7 @@ This only loads the theme if there is graphical display present.
                naquadah-theme solarized-theme
                color-theme-sanityinc-tomorrow
                spacegray-theme ample-theme
-               tronesque-theme))
+               professional-theme tronesque-theme))
     (progn (sf/package-install p)))
   (when (display-graphic-p)
     (load-theme 'solarized-dark t))
