--- a/README.org
+++ b/README.org
@@ -8,9 +8,9 @@ possible without [[http://orgmode.org/worg/org-contrib/babel/intro.html#literate
 
 - /init.el/: Just enough emacs-lisp to load, via [[http://orgmode.org/worg/org-contrib/babel/][org-babel]], /private.org/
   and [[file:emacs.org][emacs.org]].
-- /private.org/ This defines miscellaneous variables with private values
+- /private.org/: This defines miscellaneous variables with private values
   that are later used in [[file:emacs.org][emacs.org]].
-- /emacs.org/ This is the bulk of the configuration.  It endeavors to
+- /emacs.org/: This is the bulk of the configuration.  It endeavors to
   follow the model of [[http://en.wikipedia.org/wiki/Literate_programming][literate programming]].  [[http://orgmode.org/worg/org-contrib/babel/intro.html#literate-programming][Babel]] facilitates this by
   /allowing the act of programming o take place inside of Org-mode
   documents/. 
