--- a/emacs.org
+++ b/emacs.org
@@ -503,16 +503,19 @@ other news-reading utility.
     (progn
       (setq elfeed-feeds
         '(("http://codeascraft.com/feed/" devops)
-           ("http://endlessparentheses.com/atom.xml" devops emacs)
-           ("http://planet.emacsen.org/atom.xml" devops emacs)
-           ("http://oremacs.com/atom.xml" devops emacs)
+           ("http://endlessparentheses.com/atom.xml" emacs)
+           ("http://planet.emacsen.org/atom.xml" emacs)
+           ("http://oremacs.com/atom.xml" emacs)
            ("http://xkcd.com/atom.xml" comics fun)
            ("https://what-if.xkcd.com/feed.atom" fun)
-           ("http://mbork.pl/?action=rss" emacs devops)
-           ("http://www.howardism.org/index.xml" emacs devops)
-           ("http://kitchingroup.cheme.cmu.edu/blog/feed/atom/" emacs devops)
+           ("http://mbork.pl/?action=rss" emacs )
+           ("http://www.howardism.org/index.xml" emacs )
+           ("http://kitchingroup.cheme.cmu.edu/blog/feed/atom/" emacs )
            ("http://planetsysadmin.com/atom.xml" devops)
-           ("http://planet.fedoraproject.org/atom.xml" devops linux fedora)
+           ("http://planet.fedoraproject.org/atom.xml" linux fedora)
+           ("http://kernelplanet.org/rss20.xml" linux )
+           ("http://devopsreactions.tumblr.com/rss" devops fun)
+           ("http://planet.freedesktop.org/rss20.xml" linux )
            ))
       (dolist (mode '(elfeed-show-mode elfeed-search-mode))
         (evil-set-initial-state mode 'emacs))
