add whitespace visual cues to shell-script mode

--- a/emacs.org
+++ b/emacs.org
@@ -1363,6 +1363,7 @@ Also turn on *linum-mode* for shell scripts.
 
 #+BEGIN_SRC emacs-lisp
 (add-hook 'shell-script-mode 'linum-mode)
+(add-hook 'shell-script-mode 'sf/whitespace)
 #+END_SRC
 
 *** Text
