--- a/emacs.org
+++ b/emacs.org
@@ -533,6 +533,7 @@ other news-reading utility.
            ("http://devopsreactions.tumblr.com/rss" devops fun)
            ("http://planet.freedesktop.org/rss20.xml" linux )
            ("http://www.humansofnewyork.com/rss" fun)
+           ("http://americasgreatoutdoors.tumblr.com/rss" fun)
            ))
       (dolist (mode '(elfeed-show-mode elfeed-search-mode))
         (evil-set-initial-state mode 'emacs))
