--- a/emacs.org
+++ b/emacs.org
@@ -1313,6 +1313,8 @@ Define a hydra to start/switch between applications.
       ("e" notmuch "email")
       ("r" elfeed "elfeed")
       ("t" twit "twitter")
+      ("j" jabber-connect-all "jabber")
+      ("m" ansi-term "terminal")
       )
     )
 #+END_SRC
