--- a/emacs.org
+++ b/emacs.org
@@ -32,6 +32,32 @@ This will hopefully lend itself better to explain and track why I
 use different elements in my configuration, including discussion,
 comments, todo items, and so on.
 
+*** License
+
+#+BEGIN_SRC 
+Copyright (C) 2014-2015 Stephen Fromm
+
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.3
+or any later version published by the Free Software Foundation;
+with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+
+Code in this document is free software: you can redistribute it
+and/or modify it under the terms of the GNU General Public
+License as published by the Free Software Foundation, either
+version 3 of the License, or (at your option) any later version.
+
+This code is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+#+END_SRC
+
+This document is licensed under the GNU Free Documentation License
+version 1.3 or later (http://www.gnu.org/copyleft/fdl.html).
+
+** Set up init.el
+
 First thing's first: a base config is needed in =~/.emacs.d/init.el=.
 Remember to keep this simple.  :-)
 
@@ -186,15 +212,15 @@ While it is pretty straightforward to update packages via
 little easier.
 
 #+BEGIN_SRC emacs-lisp
-(defun sf/update-packages ()
-  "update all installed packages"
-  (save-window-excursion
-    (package-list-packages t)
-    (package-menu-mark-upgrades)
-    (package-menu-execute t)
-    (message "packages updated")
+  (defun sf/update-packages ()
+    "update all installed packages"
+    (save-window-excursion
+      (package-list-packages t)
+      (package-menu-mark-upgrades)
+      (package-menu-execute t)
+      (message "packages updated")
+      )
     )
-  )
 #+END_SRC
 
 *** DONE Load encrypted secrets
@@ -1939,5 +1965,3 @@ loaded.
 #+BEGIN_SRC emacs-lisp
 (message "%s" "Finished loading config")
 #+END_SRC
-
-Copyright (C) 2014-2015 Stephen Fromm
